add: basic content

--- a/index.html
+++ b/index.html
@@ -8,6 +8,24 @@
     <title>Proyecto Grupo 5</title>
 </head>
 <body>
-    
+    <header>
+        <img class="header-img" src="img/LogoCine.png" alt="logo de En Cines">
+        <nav class="header-nav">
+            <ul class="nav-ul">
+                <a class="ul-a" href="#"><li>Cartelera</li></a>
+                <a class="ul-a" href="#"><li>Sobre nosotros</li></a>
+            </ul>
+        </nav>
+    </header>
+    <section>
+
+        <!-- Imagen de peliculas generales -->
+
+    </section>
+    <footer>
+
+        <!-- redes sociales del cine + background -->
+
+    </footer>
 </body>
 </html>
