add: front page
Creación del nav, contenido principal, about us. Falta el footer

--- a/index.html
+++ b/index.html
@@ -5,27 +5,44 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap" rel="stylesheet">
     <title>Proyecto Grupo 5</title>
 </head>
 <body>
-    <header>
-        <img class="header-img" src="img/LogoCine.png" alt="logo de En Cines">
-        <nav class="header-nav">
-            <ul class="nav-ul">
-                <a class="ul-a" href="#"><li>Cartelera</li></a>
-                <a class="ul-a" href="#"><li>Sobre nosotros</li></a>
-            </ul>
+    <section class="section_nav_bar">
+        <img class="img_nav_bar" src="img/palomitas_img.png" alt="logo">
+        <nav class="nav_bar">
+            <ul class="ul_nav_bar">
+                <a class="a_ul" href="#" target="_blank"><li>Cartelera</li></a>
+                <a class="a_ul" href="#sobre_nosotros"><li>Sobre nosotros</li></a>
+                <a class="a_ul" href="#redes_sociales"><li>Siguenos</li></a>
+            </ul>   
         </nav>
-    </header>
-    <section>
-
-        <!-- Imagen de peliculas generales -->
-
     </section>
-    <footer>
-
-        <!-- redes sociales del cine + background -->
-
+    <header class="header_cine_name">
+        <p>Bienvenidos somos</p>
+        <h2>Cinemático</h2>
+    </header>
+    <section class="section_sobre_nosotros" id="sobre_nosotros">
+        <article class="article_section_sobre_nosotros" id="article_one">
+            <img class="img_section_sobre_nosotros" src="img/ambiente famililar.webp" alt="sobre nosotros ambiente familiar">
+            <p> Ambiente para toda la familia </p>
+        </article>
+        <article class="article_section_sobre_nosotros" id="article_two">
+            <img class="img_section_sobre_nosotros" src="img/camara_ultima_generacion.jpg" alt="sobre nosotros camara">
+            <p>Películas de calidad</p>
+        </article>
+        <article class="article_section_sobre_nosotros" id="article_three">
+            <img class="article_three_img" src="img/atencion_al_publico.jpg" alt="sobre nosotros atencion al publico">
+            <p>La mejor atención<br>
+               Salas vip</p>
+            <img class="article_three_img" src="img/camas_cine.webp" alt="sobre nosotros sala vip">
+        </article>
+    </section>
+    <footer id="redes_sociales">
+        <!-- facebook, instagram, twiter -->
     </footer>
 </body>
 </html>
