--- a/index.html
+++ b/index.html
@@ -27,22 +27,27 @@
     </header>
     <section class="section_sobre_nosotros" id="sobre_nosotros">
         <article class="article_section_sobre_nosotros" id="article_one">
-            <img class="img_section_sobre_nosotros" src="img/ambiente famililar.webp" alt="sobre nosotros ambiente familiar">
-            <p> Ambiente para toda la familia </p>
+            <div class="div_sobre_nosotros"><img class="img_section_sobre_nosotros" src="img/ambiente famililar.webp" alt="sobre nosotros ambiente familiar"></div>
+            <div class="div_sobre_nosotros"><p> Ambiente para toda la familia </p></div>
         </article>
         <article class="article_section_sobre_nosotros" id="article_two">
-            <img class="img_section_sobre_nosotros" src="img/camara_ultima_generacion.jpg" alt="sobre nosotros camara">
-            <p>Películas de calidad</p>
+            <div class="div_sobre_nosotros"><img class="img_section_sobre_nosotros" src="img/camara_ultima_generacion.jpg" alt="sobre nosotros camara"></div>
+            <div class="div_sobre_nosotros"><p>Películas de calidad</p></div>
         </article>
         <article class="article_section_sobre_nosotros" id="article_three">
-            <img class="article_three_img" src="img/atencion_al_publico.jpg" alt="sobre nosotros atencion al publico">
-            <p>La mejor atención<br>
-               Salas vip</p>
-            <img class="article_three_img" src="img/camas_cine.webp" alt="sobre nosotros sala vip">
+            <div class="div_sobre_nosotros_dos"><img class="article_three_img" src="img/atencion_al_publico.jpg" alt="sobre nosotros atencion al publico"></div>
+            <div class="div_sobre_nosotros_dos"><p>La mejor atención</p></div>
+            <div class="div_sobre_nosotros_dos"><p>Salas vip</p></div>   
+            <div class="div_sobre_nosotros_dos"><img class="article_three_img" src="img/camas_cine.webp" alt="sobre nosotros sala vip"></div> 
         </article>
     </section>
     <footer id="redes_sociales">
-        <!-- facebook, instagram, twiter -->
+        <article>
+            <a class="a_article_footer" href="https://twitter.com/_cinematicos" target="_blank"><img class="img_footer" src="img/twitter.png" alt="Logo twitter"></a>
+            <a class="a_article_footer" href="https://www.facebook.com/Cinem%C3%A1ticos-261049567909616/" target="_blank"><img class="img_footer" src="img/facebook.png" alt="Logo facebook"></a>
+            <a class="a_article_footer" href="https://www.instagram.com/cinematics_pakistan/" target="_blank"><img class="img_footer" src="img/instagram.png" alt="Logo instagram"></a>
+        </article>
+        <img class="img_footer" src="img/camara_img.png" alt="Logo cine">
     </footer>
 </body>
 </html>
