add: create cartelera
Se creo la página de las cartelera con su css

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <img class="img_nav_bar" src="img/palomitas_img.png" alt="logo">
         <nav class="nav_bar">
             <ul class="ul_nav_bar">
-                <a class="a_ul" href="#" target="_blank"><li>Cartelera</li></a>
+                <a class="a_ul" href="peliculas.html" target="_blank"><li>Cartelera</li></a>
                 <a class="a_ul" href="#sobre_nosotros"><li>Sobre nosotros</li></a>
                 <a class="a_ul" href="#redes_sociales"><li>Siguenos</li></a>
             </ul>   
