--- a/peliculas.html
+++ b/peliculas.html
@@ -13,7 +13,7 @@
 <body>
     <hr>
     <header class="header">
-        <h2 class="header__h2">Cartelera</h2>
+        <h1 class="header__h2">Cartelera Cinematica</h1>
     </header>
     <hr>
     <!-- Pelicula 1 -->
